<resources>
    <string name="app_name">Task1</string>
    <string name="frame1">FRAME 1</string>
    <string name="frame2">FRAME 2</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="alicia">Alicia Keys</string>
    <string name="sanfrans">San Francisco, CA</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="london">London</string>
    <string name="brandon_heath">Brandon Heath</string>
    <string name="los_angeles_usa">Los Angeles, USA</string>
    <string name="follow">FOLLOW</string>
    <string name="write">WRITE</string>
    <string name="chat">Chat</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="friends">Friends</string>
    <string name="music">Music</string>
    <string name="notification">Notification</string>
</resources>
